--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Vai&family=Satisfy&display=swap" rel="stylesheet">
@@ -33,7 +33,7 @@
             <div>
                 <h2 id="About-me">About-me :</h2>
 
-                <img class="profile-img" src="/assets/marc.png" alt="Avatar of Marc Hudson">
+                <img class="profile-img" src="./assets/marc.png" alt="Avatar of Marc Hudson">
             </div>
             <p> Just like there is more than one way to skin a cat (or so they say), there is more than one way to write
                 an essay. One is not required to produce a perfectly formatted five-paragraph essay every time one
